fixing some layout issues

--- a/FrontEnd/public/css/header.css
+++ b/FrontEnd/public/css/header.css
@@ -269,7 +269,7 @@
 
 
     .nav_phone_view li .dropdown-content {
-        width: 60vw;
+        width: 80vw;
 
         z-index: 9;
     }
