--- a/FrontEnd/public/css/main.css
+++ b/FrontEnd/public/css/main.css
@@ -1043,20 +1043,21 @@ button.active {
     }
 
     .plus-sign {
-        width: 6%;
+        width: 7%;
         height: 65%;
     }
 
 
     .inclusion-exclusion-heading {
         margin-top: 1rem;
-        width: 50%;
+        width: 60%;
     }
 
     #inclusion,
     #exclusion {
         font-size: 1rem;
         width: 80%;
+        height: 100%;
     }
 
     /* blog media query */
@@ -1064,6 +1065,7 @@ button.active {
     .main-container {
         margin-top: 1em;
         flex-direction: column-reverse;
+        gap:4em;
     }
     .first-main-container {
         width: 100%;
@@ -1083,11 +1085,12 @@ button.active {
     .main-image{
         width: 85%;
         justify-content: center;
+        margin-top: 2em;
     }
 
     .main-image div:last-child{
         width: 80%;
-        left: 25%;
+        left: 20%;
     }
     
 
@@ -1100,8 +1103,13 @@ button.active {
 
     
 
-    .form-search,.add-post{
-        width: 100%;
+    .form-search{
+        width: 60%;
+        height: 100%;
+        justify-content: flex-start;
+    }
+    .add-post{
+        width: 40%;
         height: 100%;
         justify-content: flex-start;
     }
@@ -1109,22 +1117,32 @@ button.active {
         padding: 0.4em;
         height: 100%;
     }
+    .search-bar img{
+        width: 4vw;
+        height: 4vw;
+    }
+    .search-bar input{
+        width: 80%;
+        height: 4vw;
+    }
     .add-post a{
         height: 100%;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
+  
+  
     .full-width,
     .half-width {
         height: 20vh;
     }
-
+   
     .half-width {
         grid-column: span 2;
     }
 
     .pagination a {
-        width: 30%;
+        width: 40%;
         height: 8vw;
     }
 
